// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser unary expressions parses consecutive unary '-' 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Unary {
      "operator": Object {
        "kind": 7,
        "line": 1,
        "text": "-",
      },
      "right": Unary {
        "operator": Object {
          "kind": 7,
          "line": 1,
          "text": "-",
        },
        "right": Unary {
          "operator": Object {
            "kind": 7,
            "line": 1,
            "text": "-",
          },
          "right": Unary {
            "operator": Object {
              "kind": 7,
              "line": 1,
              "text": "-",
            },
            "right": Unary {
              "operator": Object {
                "kind": 7,
                "line": 1,
                "text": "-",
              },
              "right": Literal {
                "value": Int32 {
                  "kind": 3,
                  "value": 5,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses consecutive unary 'not' 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Unary {
      "operator": Object {
        "kind": 61,
        "line": 1,
        "text": "not",
      },
      "right": Unary {
        "operator": Object {
          "kind": 61,
          "line": 1,
          "text": "not",
        },
        "right": Unary {
          "operator": Object {
            "kind": 61,
            "line": 1,
            "text": "not",
          },
          "right": Unary {
            "operator": Object {
              "kind": 61,
              "line": 1,
              "text": "not",
            },
            "right": Unary {
              "operator": Object {
                "kind": 61,
                "line": 1,
                "text": "not",
              },
              "right": Literal {
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses unary '-' 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Unary {
      "operator": Object {
        "kind": 7,
        "line": 1,
        "text": "-",
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 5,
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses unary 'not' 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Unary {
      "operator": Object {
        "kind": 61,
        "line": 1,
        "text": "not",
      },
      "right": Literal {
        "value": BrsBoolean {
          "kind": 1,
          "value": true,
        },
      },
    },
  },
]
`;
